--- a/how-it-works.html
+++ b/how-it-works.html
@@ -105,12 +105,12 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link dropdown-toggle" href="https://app.btcfx.io">
+                            <a class="nav-link dropdown-toggle" href="https://btcfx-app.herokuapp.com">
                             Login
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link action-btn dropdown-toggle" href="https://app.btcfx.io/register">
+                            <a class="nav-link action-btn dropdown-toggle" href="https://btcfx-app.herokuapp.com/register">
                             Invest Now
                             </a>
                         </li>
@@ -192,8 +192,8 @@
                     <img src="img/logo-white.png" width="120px" alt="BTCFX Logo" />
                   </a>
                   <p class="mt_30">
-                    Blk 3013, 03-2134 Bedok North Ave 4, Bedok Industrial Park, Singapore.
-                    <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD. (Co. Reg 200912467M)</div>
+                    Blk 3013, 03-2134 Bedok North Ave 4, Bedok Industrial Park, Lagos State.
+                    <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD. (Co. Reg RC200912467)</div>
                     <div class="mt_60 w_color">Copyright &copy; 2017 BTCFX.</div>
                   </p>
                 </div>
