--- a/index.html
+++ b/index.html
@@ -48,6 +48,31 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MVWZHHL"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+    <div id="preloader">
+      <div id="ctn-preloader" class="ctn-preloader dark">
+        <div class="animation-preloader">
+          <div class="spinner"></div>
+          <p class="text-center w_color" style="color: #fff;">Loading...</p>
+        </div>
+        <div class="loader dark_bg">
+          <div class="row">
+            <div class="col-3 loader-section section-left">
+              <div class="bg"></div>
+            </div>
+            <div class="col-3 loader-section section-left">
+              <div class="bg"></div>
+            </div>
+            <div class="col-3 loader-section section-right">
+              <div class="bg"></div>
+            </div>
+            <div class="col-3 loader-section section-right">
+              <div class="bg"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
     <header class="header_area">
         <nav class="navbar navbar-expand-lg menu_six">
             <div class="container custom_container p0">
@@ -79,12 +104,12 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link dropdown-toggle" href="https://app.btcfx.io">
+                            <a class="nav-link dropdown-toggle" href="https://btcfx-app.herokuapp.com/">
                             Login
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link action-btn dropdown-toggle" href="https://app.btcfx.io/register">
+                            <a class="nav-link action-btn dropdown-toggle" href="https://btcfx-app.herokuapp.com/register">
                             Invest Now
                             </a>
                         </li>
@@ -104,7 +129,7 @@
                         <h2 class="f_700 f_size_40 w_color mb-0 wow fadeInUp" data-wow-delay="0.3s">Grow Bitcoin the Smart and Secure Way</h2>
                         <p class="w_color f_300 f_size_18 l_height30 mt_30 wow fadeInUp" data-wow-delay="0.4s">BTCFX is a global trusted bitcoin investment platform that is focused<br /> on growing your bitcoin the <b>safe</b>, <b>reliable</b> and <b>profitable</b> <br /> way with the end goal of increasing financial growth.</p>
                         <div class="action_btn d-flex align-items-center mt_40 justify-content-center wow fadeInUp" data-wow-delay="0.5s">
-                            <a href="https://app.btcfx.io/register" class="btn_hover saas_banner_btn" style="margin: 10px;">Invest Now</a>
+                            <a href="https://btcfx-app.herokuapp.com/register" class="btn_hover saas_banner_btn" style="margin: 10px;">Invest Now</a>
                         </div>
                     </div>
                     <div class="dasboard_img mt_60 wow fadeInUp" data-wow-delay="0.7s">
@@ -149,7 +174,7 @@
                   easy to use bitcoin investment platform that guarantees bitcoin growth.
                 </p>
                 <a
-                  href="https://app.btcfx.io/register"
+                  href="https://btcfx-app.herokuapp.com/register"
                   class="btn_hover saas_banner_btn mt_20"
                 >
                   INVEST FOR GROWTH TODAY!
@@ -163,7 +188,7 @@
                   <h2 class="f_size_30 f_600 f_p w_color l_height40 mb_20">Wondering What We Do With Your Bitcoin?</h2>
                   <p class="d_p_color f_300 f_size_15 l_height28">Wondering what we do with your bitcoin? With our strong and global partnerships with chain of experienced and successful cryptocurrency traders in US, UK, Singapore and Hong kong, what we basically do is loan your prestigious bitcoin to experienced and successful crypto-traders that are in partnership with BTCFX to trade in the crypto-economy.</p>
                   <h2 class="f_size_30 f_600 f_p w_color l_height40 mb_20">Ready To Discover Where Bitcoin Growth Happens</h2>
-                  <a href="https://app.btcfx.io/register" class="btn_hover saas_banner_btn mt_40">Begin Here</a>
+                  <a href="https://btcfx-app.herokuapp.com/register" class="btn_hover saas_banner_btn mt_40">Begin Here</a>
                 </div>
             </div>
           </div>
@@ -336,7 +361,7 @@
                             <li><i class="fa fa-check"></i><b class="f_600"> <span style="color: #3d57f4; font-size: 20px;">200%</span> Return of Investment</b></li>
                         </ul>
                         <br />
-                        <a href="https://app.btcfx.io/register" class="saas_banner_btn mt_30" style="margin: 10px;">GET STARTED</a>
+                        <a href="https://btcfx-app.herokuapp.com/register" class="saas_banner_btn mt_30" style="margin: 10px;">GET STARTED</a>
                     </div>
                 </div>
             </div>
@@ -385,7 +410,7 @@
                   </a>
                   <p class="mt_30">
                     Blk 3013, 03-2134 Bedok North Ave 4, Bedok Industrial Park, Lagos State.
-                    <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD.</div>
+                    <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD. (Co. Reg RC200912467)</div>
                     <div class="mt_60 w_color">Copyright &copy; 2017 BTCFX.</div>
                   </p>
                 </div>
