--- a/faqs.html
+++ b/faqs.html
@@ -105,12 +105,12 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link dropdown-toggle" href="https://app.btcfx.io">
+                            <a class="nav-link dropdown-toggle" href="https://btcfx-app.herokuapp.com">
                             Login
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link action-btn dropdown-toggle" href="https://app.btcfx.io/register">
+                            <a class="nav-link action-btn dropdown-toggle" href="https://btcfx-app.herokuapp.com/register">
                             Invest Now
                             </a>
                         </li>
@@ -346,18 +346,18 @@
         <div class="footer_top_six">
           <div class="container">
             <div class="row">
-              <div class="col-lg-4 col-sm-6">
-                <div class="f_widget company_widget">
-                  <a href="index.html" class="f-logo">
-                    <img src="img/logo-white.png" width="120px" alt="BTCFX Logo" />
-                  </a>
-                  <p class="mt_30">
-                    Blk 3013, 03-2134 Bedok North Ave 4, Bedok Industrial Park, Singapore.
-                    <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD. (Co. Reg 200912467M)</div>
-                    <div class="mt_60 w_color">Copyright &copy; 2017 BTCFX.</div>
-                  </p>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="f_widget company_widget">
+                        <a href="index.html" class="f-logo">
+                        <img src="img/logo-white.png" width="120px" alt="BTCFX Logo" />
+                        </a>
+                        <p class="mt_30">
+                        Blk 3013, 03-2134 Bedok North Ave 4, Bedok Industrial Park, Lagos State.
+                        <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD. (Co. Reg RC200912467)</div>
+                        <div class="mt_60 w_color">Copyright &copy; 2017 BTCFX.</div>
+                        </p>
+                    </div>
                 </div>
-              </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="f_widget about-widget">
                   <h3 class="f-title f_600 w_color f_size_18 mb_40">
