--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -73,8 +73,6 @@
       </div>
     </div>
 
- 
-
     <header class="header_area" style="background: #0f1029;">
         <nav class="navbar navbar-expand-lg menu_six">
             <div class="container custom_container p0">
@@ -106,12 +104,12 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link dropdown-toggle" href="https://app.btcfx.io">
+                            <a class="nav-link dropdown-toggle" href="https://btcfx-app.herokuapp.com">
                             Login
                             </a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link action-btn dropdown-toggle" href="https://app.btcfx.io/register">
+                            <a class="nav-link action-btn dropdown-toggle" href="https://btcfx-app.herokuapp.com/register">
                             Invest Now
                             </a>
                         </li>
@@ -565,16 +563,16 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-4 col-sm-6">
-                <div class="f_widget company_widget">
-                  <a href="index.html" class="f-logo">
-                    <img src="img/logo-white.png" width="120px" alt="BTCFX Logo" />
-                  </a>
-                  <p class="mt_30">
-                    Blk 3013, 03-2134 Bedok North Ave 4, Bedok Industrial Park, Singapore.
-                    <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD. (Co. Reg 200912467M)</div>
-                    <div class="mt_60 w_color">Copyright &copy; 2017 BTCFX.</div>
-                  </p>
-                </div>
+                  <div class="f_widget company_widget">
+                    <a href="index.html" class="f-logo">
+                      <img src="img/logo-white.png" width="120px" alt="BTCFX Logo" />
+                    </a>
+                    <p class="mt_30">
+                      Blk 3013, 03-2134 Bedok North Ave 4, Bedok Industrial Park, Lagos State.
+                      <div class="mt_20" style="color: #f2f2f2;">BTCFX LTD. (Co. Reg RC200912467)</div>
+                      <div class="mt_60 w_color">Copyright &copy; 2017 BTCFX.</div>
+                    </p>
+                  </div>
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="f_widget about-widget">
